# highSpeedRailway

./: .gitignore  CMakeLists.txt  CMakeLists.txt2  Doxyfile  config_file.txt  curve_fit.cpp  kalman.cpp  kalman.h  test.cpp
data/: 0_B015_R001.csv  0_B018_R001.csv  0_B020_R001.csv  0_coord.csv  1_B015_R001.csv  1_B018_R001.csv  1_B020_R001.csv  1_new_coord.csv  2_B015_R001.csv  2_B016_R001.csv  2_B017_R001.csv  2_B019_R001.csv  2_coord.csv  2_new_coord.csv  Dogleg_diff_withimu_300.csv  Untitled.ipynb  baseCoords.txt  diff.csv  diff_no_imu_3000.csv  diff_with_bias_1000.csv  diff_with_bias_1000_5hz.csv  diff_with_bias_300.csv  imuLcjData.csv  imu_data  kalman_res.csv  levenberg_diff_withimu_300.csv  rover_coord
data/.ipynb_checkpoints/: diff-checkpoint.csv
data/.virtual_documents/: Untitled.ipynb.py
data/base_data/: baseCoords_xyz.csv
data/debug/: imuGnss.csv  imuGnssCoord.csv  imuLcj.csv  r001.csv  res.csv  rover.csv
data/imu_csv_data/: 0_B016_R001.csv  0_B017_R001.csv  0_B019_R001.csv  0_new_coord.csv  1_B016_R001.csv  1_B017_R001.csv  1_B019_R001.csv  1_coord.csv  2_B018_R001.csv  2_B020_R001.csv
data/result/: B015_r001.csv  B016_r001.csv  B017_r001.csv  B018_r001.csv  diff.csv  (+3 more)
geoLib/: CMakeLists.txt  geolib.cpp  geolib.h
highSpeedRailwayLib/: CMakeLists.txt  baseCoords.cpp  baseCoords.hpp  baseLine.cpp  baseLine.hpp  calCoord.cpp  commonFunction.cpp  commonFunction.hpp  dateTime.cpp  dateTime.hpp  gnssCoord.hpp  highSpeedRailway.h  imuCoord.cpp  imuCoord.hpp  imuData.cpp  imuData.hpp  imuLcjData.cpp  imuLcjData.hpp  lcjData.cpp  lcjData.hpp  staticCoord.cpp  staticCoord.hpp  timeSeriesBase.hpp
kalman/: kalman_filter.cpp  kalman_filter.h
python_script/: datanay.ipynb
